2002-12-03  Matthias Clasen  <maclas@gmx.de>

	Moveresize emulation for all edges.  (#52833)
	
	* gdk/x11/gdkwindow-x11.c (update_pos): Support all edges. 
	(calculate_unmoving_origin): New function which calculates the
	ICCCM reference point for the window depending on the gravity.
	(emulate_resize_drag): use calculate_unmoving_origin().
	(emulate_move_drag): use calculate_unmoving_origin().

	RTL flipping for statusbars.  (#96832)
	
	* gtk/gtkstatusbar.c (get_grip_edge): New function returning the
	appropriate grip edge for a statusbar.
	(get_grip_rect): Do the right thing in RTL mode.
	(gtk_statusbar_button_press): Initiate a resize drag on the
	appropriate edge. 
	(gtk_statusbar_expose_event): Paint the resize grip for the
	appropriate edge.

2002-12-03  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtkstyle.c: Fix doc comment.

Mon Dec  2 20:36:28 2002  Owen Taylor  <otaylor@redhat.com>

	* === Released GTK+-2.1.3 ===

	* configure.in: Version 2.1.3, interface ago 0.

	* NEWS: Update

2002-12-02  Murray Cumming  <murrayc@usa.net>

	* gtk/gtktreemodel.h: Declare gtk_tree_row_reference_get_type(). It is
	already used by a macro in the same header.

2002-11-28  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdkdisplay.c: 
	* gdk/gdkdisplaymanager.c: 
	* gdk/gdk.c: 
	* gdk/gdkdraw.c:
	* gdk/gdkevents.c:
	* gdk/gdkrgb.c:
	* gdk/gdkscreen.c:
	* gdk/gdkwindow.c:
	* gdk/x11/gdkcolor-x11.c:
	* gdk/x11/gdkcursor-x11.c:
	* gdk/x11/gdkdisplay-x11.c:
	* gdk/x11/gdkdnd-x11.c:
	* gdk/x11/gdkevents-x11.c:
	* gdk/x11/gdkfont-x11.c:
	* gdk/x11/gdkgc-x11.c:
	* gdk/x11/gdkinput.c:
	* gdk/x11/gdkkeys-x11.c:
	* gdk/x11/gdkpango-x11.c:
	* gdk/x11/gdkpixmap-x11.c:
	* gdk/x11/gdkproperty-x11.c:
	* gdk/x11/gdkscreen-x11.c:
	* gdk/x11/gdkselection-x11.c:
	* gdk/x11/gdkvisual-x11.c:
	* gdk/x11/gdkwindow-x11.c:
	* gdk/x11/gdkxid.c:
	* gtk/gtkclipboard.c:
	* gtk/gtkcolorsel.c:
	* gtk/gtkiconfactory.c:
	* gtk/gtkinvisible.c:
	* gtk/gtkliststore.c:
	* gtk/gtkmenu.c:
	* gtk/gtkmenushell.c: